RESOLVED FIXED313721
UseSkiaForComposition: compositing/update-compositing-rects-with-sharing-descendants.html fails
https://bugs.webkit.org/show_bug.cgi?id=313721
Summary UseSkiaForComposition: compositing/update-compositing-rects-with-sharing-desc...
Fujii Hironori
Reported 2026-04-30 01:26:43 PDT
If UseSkiaForComposition is enabled, compositing/update-compositing-rects-with-sharing-descendants.html fails.
Attachments
test case (3.91 KB, text/html)
2026-04-30 03:15 PDT, Fujii Hironori
no flags
test 2 (775 bytes, text/html)
2026-04-30 19:30 PDT, Fujii Hironori
no flags
test 3 (458 bytes, text/html)
2026-04-30 23:18 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2026-04-30 01:45:33 PDT
Fujii Hironori
Comment 2 2026-04-30 03:15:11 PDT
Created attachment 479387 [details] test case
Fujii Hironori
Comment 3 2026-04-30 19:30:15 PDT
Fujii Hironori
Comment 4 2026-04-30 23:18:35 PDT
Created attachment 479414 [details] test 3 compositing/update-compositing-rects-with-sharing-descendants.html fails because the blue box isn't painted. However, with MiniBrowser, the blue box is painted. The difference between MiniBrowser and WebKitTestRunner is AsyncOverflowScrolling. By disabling AsyncOverflowScrolling, the artifact is reproducible with MiniBrowser. > ./Tools/Scripts/run-minibrowser --gtk --release --features=-AsyncOverflowScrolling ./LayoutTests/compositing/update-compositing-rects-with-sharing-descendants.html If AsyncOverflowScrolling is enabled, overflow:scroll div also gets a composited layer. And, the parent isolation:isolate layer and the child overflow:scroll layer overlaps. If overlap region is larger than non-overlap region, the non-overlap region is merged into the overlap region. https://github.com/WebKit/WebKit/blob/e3d5d9821fa8886c33382d72f35d0d201f24536f/Source/WebCore/platform/graphics/skia/SkiaCompositingLayer.cpp#L920-L925 This is the reason MiniBrowser paints the blue box. If I enlarge the blue box, MiniBrowser also doesn't paint the blue box.
EWS
Comment 5 2026-05-04 03:10:59 PDT
Committed 312511@main (96de099fd31a): <https://commits.webkit.org/312511@main> Reviewed commits have been landed. Closing PR #63956 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.